--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@headlessui/react": "^1.7.12",
     "@heroicons/react": "^2.0.16",
     "@planetscale/database": "^1.5.0",
+    "@prisma/client": "^4.13.0",
     "@tremor/react": "^2.0.1",
     "@types/js-cookie": "^3.0.3",
     "@types/node": "18.14.2",
@@ -32,6 +33,7 @@
     "react-dom": "18.2.0",
     "server-only": "^0.0.1",
     "tailwindcss": "^3.2.7",
+    "turbo": "^1.9.3",
     "typescript": "4.9.5"
   },
   "prettier": {
