--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
   "dependencies": {
     "@headlessui/react": "^1.7.12",
     "@heroicons/react": "^2.0.16",
+    "@nextui-org/react": "1.0.0-beta.12",
     "@planetscale/database": "^1.5.0",
     "@prisma/client": "^4.13.0",
-    "@tremor/react": "^2.0.1",
+    "@tremor/react": "^2.2.0",
     "@types/js-cookie": "^3.0.3",
     "@types/node": "18.14.2",
     "@types/react": "18.0.28",
@@ -30,6 +31,7 @@
     "prettier": "^2.8.4",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
+    "react-apexcharts": "^1.4.0",
     "react-dom": "18.2.0",
     "server-only": "^0.0.1",
     "tailwindcss": "^3.2.7",
